--- a/sql-part-1/exercises/SQL-Part-1-Exercises.ipynb
+++ b/sql-part-1/exercises/SQL-Part-1-Exercises.ipynb
@@ -68,7 +68,9 @@
    },
    "outputs": [],
    "source": [
-    "-- Code Here:"
+    "-- Code Here:s\n",
+    "SELECT 'id' TOP 1000\n",
+    "FROM 'books'"
    ]
   },
   {
