--- a/sql-part-1/exercises/SQL-Part-1-Exercises.ipynb
+++ b/sql-part-1/exercises/SQL-Part-1-Exercises.ipynb
@@ -90,7 +90,13 @@
    },
    "outputs": [],
    "source": [
-    "-- Code Here:"
+    "SELECT COUNT (title)\n",
+    "FROM BooksDB.dbo.books\n",
+    "-- returns 10,000\n",
+    "\n",
+    "SELECT COUNT (DISTINCT title)\n",
+    "FROM BooksDB.dbo.books\n",
+    "-- returns 9,964"
    ]
   },
   {
@@ -110,7 +116,9 @@
    },
    "outputs": [],
    "source": [
-    "-- Code Here:"
+    "SELECT COUNT(book_id)\n",
+    "FROM BooksDB.dbo.books\n",
+    "WHERE original_publication_year < 1800"
    ]
   },
   {
@@ -130,7 +138,8 @@
    },
    "outputs": [],
    "source": [
-    "-- Code Here:"
+    "SELECT DISTINCT authors\n",
+    "FROM BooksDB.dbo.books"
    ]
   },
   {
@@ -150,7 +159,9 @@
    },
    "outputs": [],
    "source": [
-    "-- Code Here:"
+    "SELECT COUNT (id)\n",
+    "FROM BooksDB.dbo.books\n",
+    "WHERE language_code = 'eng' OR language_code = 'en'"
    ]
   },
   {
@@ -170,7 +181,9 @@
    },
    "outputs": [],
    "source": [
-    "-- Code Here:"
+    "SELECT COUNT (original_title)\n",
+    "FROM BooksDB.dbo.books\n",
+    "WHERE original_publication_year >= '1914' AND original_publication_year <= '1921'"
    ]
   },
   {
@@ -203,7 +216,9 @@
    },
    "outputs": [],
    "source": [
-    "-- Code Here:"
+    "SELECT TOP 1000 (goodreads_book_id)\n",
+    "FROM BooksDB.dbo.book_tags\n",
+    "ORDER BY tag_id "
    ]
   },
   {
@@ -223,7 +238,9 @@
    },
    "outputs": [],
    "source": [
-    "--- Code Here:"
+    "SELECT COUNT (goodreads_book_id)\n",
+    "FROM BooksDB.dbo.book_tags\n",
+    "GROUP BY tag_id"
    ]
   },
   {
@@ -243,7 +260,9 @@
    },
    "outputs": [],
    "source": [
-    "-- Code Here:"
+    "SELECT COUNT (goodreads_book_id) AS 'ID by Tag'\n",
+    "FROM BooksDB.dbo.book_tags\n",
+    "GROUP BY tag_id"
    ]
   },
   {
@@ -276,7 +295,9 @@
    },
    "outputs": [],
    "source": [
-    "-- Code Here:"
+    "SELECT TOP 1000 *\n",
+    "FROM BooksDB.dbo.ratings\n",
+    "ORDER BY rating ASC;"
    ]
   },
   {
@@ -296,7 +317,9 @@
    },
    "outputs": [],
    "source": [
-    "-- Code Here:"
+    "SELECT COUNT (user_id)\n",
+    "FROM BooksDB.dbo.ratings\n",
+    "WHERE rating < 2"
    ]
   },
   {
@@ -316,7 +339,10 @@
    },
    "outputs": [],
    "source": [
-    "-- Code Here:"
+    "-- I don't really understand what \"sum\" means in this context. I think it means a sum of all the books' ratings that are 4 or higher? \n",
+    "SELECT SUM (rating)\n",
+    "FROM BooksDB.dbo.ratings\n",
+    "WHERE rating >= 4"
    ]
   },
   {
@@ -350,7 +376,9 @@
    },
    "outputs": [],
    "source": [
-    "-- Code Here:"
+    "SELECT tag_name\n",
+    "FROM BooksDB.dbo.tags\n",
+    "WHERE tag_name LIKE '%mystery%'"
    ]
   },
   {
@@ -372,7 +400,9 @@
    "source": [
     "-- SELECT *\n",
     "   -- FROM BooksDB.dbo.tags\n",
-    "   -- WHERE tag_name < 'd' AND tag_name >= 'c';"
+    "   -- WHERE tag_name < 'd' AND tag_name >= 'c';\n",
+    "\n",
+    "-- My Answer: It is returning all the results where the Tag name begins with the letter C. Less than 'd' meaning all letters that precede d in the alphabet. and greater than or equal to c, which leaves us with only tags that begin with C"
    ]
   },
   {
@@ -408,7 +438,10 @@
    },
    "outputs": [],
    "source": [
-    "-- Code Here:"
+    "SELECT COUNT (book_id) AS 'Total Books to Read'\n",
+    "FROM BooksDB.dbo.to_read\n",
+    "GROUP BY user_id \n",
+    "ORDER BY user_id"
    ]
   },
   {
@@ -430,7 +463,10 @@
    },
    "outputs": [],
    "source": [
-    "-- Code Here:"
+    "SELECT COUNT (user_id) AS 'Total Books to Read'\n",
+    "FROM BooksDB.dbo.to_read\n",
+    "GROUP BY book_id \n",
+    "ORDER BY book_id"
    ]
   }
  ],
