--- a/sql-part-4/exercises/SQL-Part-4-Exercises.ipynb
+++ b/sql-part-4/exercises/SQL-Part-4-Exercises.ipynb
@@ -1,203 +1,250 @@
 {
-    "metadata": {
-        "kernelspec": {
-            "name": "SQL",
-            "display_name": "SQL",
-            "language": "sql"
-        },
-        "language_info": {
-            "name": "sql",
-            "version": ""
-        }
-    },
-    "nbformat_minor": 2,
-    "nbformat": 4,
     "cells": [
         {
+            "attachments": {},
             "cell_type": "markdown",
+            "metadata": {
+                "azdata_cell_guid": "10006a10-882f-4f55-8d42-f36044fdb6c7"
+            },
             "source": [
                 "# Exercises: Complex queries\n",
                 "\n",
                 "For the exercises, you are tasked with writing five queries that will help you delve deeper into BooksDB. You can choose whether you want to use a correlated subquery, a nested subquery, the UNION operator, the INTERSECT operator, or the EXCEPT operator for each one. You may not use joins or add multiple statements to the WHERE clause.\n",
                 "\n",
                 "1. Write a query that will return the number of users who rated a book above it's average rating."
-            ],
-            "metadata": {
-                "azdata_cell_guid": "10006a10-882f-4f55-8d42-f36044fdb6c7"
-            },
-            "attachments": {}
+            ]
         },
         {
             "cell_type": "code",
-            "source": [
-                ""
-            ],
+            "execution_count": null,
             "metadata": {
                 "azdata_cell_guid": "203eb95e-6585-435f-8a8e-bfa0dfe6f7c0",
                 "tags": []
             },
             "outputs": [
                 {
-                    "output_type": "display_data",
                     "data": {
-                        "text/html": "Commands completed successfully."
+                        "text/html": [
+                            "Commands completed successfully."
+                        ]
                     },
-                    "metadata": {}
+                    "metadata": {},
+                    "output_type": "display_data"
                 },
                 {
-                    "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00"
+                        "text/html": [
+                            "Total execution time: 00:00:00"
+                        ]
                     },
-                    "metadata": {}
+                    "metadata": {},
+                    "output_type": "display_data"
                 }
             ],
-            "execution_count": 1
+            "source": [
+                "-- Distinct count of users who rated a book higher than it's average rating -- 898950 \n",
+                "SELECT DISTINCT COUNT([user_id])\n",
+                "FROM BooksDB.dbo.ratings\n",
+                "WHERE \n",
+                "    rating > ANY (SELECT average_rating FROM BooksDB.dbo.books)"
+            ]
         },
         {
+            "attachments": {},
             "cell_type": "markdown",
-            "source": [
-                "2. Write a query that returns the book ids of all books that have over 1000 ratings of 1 star or over 1000 ratings of 5 stars."
-            ],
             "metadata": {
                 "azdata_cell_guid": "7f849931-6c9c-4cd9-b3ba-66871052673d"
             },
-            "attachments": {}
+            "source": [
+                "2. Write a query that returns the book ids of all books that have over 1000 ratings of 1 star or over 1000 ratings of 5 stars."
+            ]
         },
         {
             "cell_type": "code",
-            "source": [
-                ""
-            ],
+            "execution_count": null,
             "metadata": {
                 "azdata_cell_guid": "bce732e3-1590-457b-b1f9-5319345ff790"
             },
             "outputs": [
                 {
-                    "output_type": "display_data",
                     "data": {
-                        "text/html": "Commands completed successfully."
+                        "text/html": [
+                            "Commands completed successfully."
+                        ]
                     },
-                    "metadata": {}
+                    "metadata": {},
+                    "output_type": "display_data"
                 },
                 {
-                    "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00"
+                        "text/html": [
+                            "Total execution time: 00:00:00"
+                        ]
                     },
-                    "metadata": {}
+                    "metadata": {},
+                    "output_type": "display_data"
                 }
             ],
-            "execution_count": 2
+            "source": [
+                "SELECT book_id\n",
+                "FROM BooksDB.dbo.books\n",
+                "WHERE ratings_1 > '1000'\n",
+                "UNION ALL\n",
+                "SELECT book_id\n",
+                "FROM BooksDB.dbo.books\n",
+                "WHERE ratings_5 > '1000'"
+            ]
         },
         {
+            "attachments": {},
             "cell_type": "markdown",
-            "source": [
-                "3. Write a query that returns the book ids of all books that have over 1000 ratings of 1 star and over 1000 ratings of 5 stars."
-            ],
             "metadata": {
                 "azdata_cell_guid": "9c53b866-c8e8-465e-b089-7702b191a15e"
             },
-            "attachments": {}
+            "source": [
+                "3. Write a query that returns the book ids of all books that have over 1000 ratings of 1 star and over 1000 ratings of 5 stars."
+            ]
         },
         {
             "cell_type": "code",
-            "source": [
-                ""
-            ],
+            "execution_count": null,
             "metadata": {
                 "azdata_cell_guid": "43e39973-5a29-45ff-b2a9-9c658a19c296"
             },
             "outputs": [
                 {
-                    "output_type": "display_data",
                     "data": {
-                        "text/html": "Commands completed successfully."
+                        "text/html": [
+                            "Commands completed successfully."
+                        ]
                     },
-                    "metadata": {}
+                    "metadata": {},
+                    "output_type": "display_data"
                 },
                 {
-                    "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00"
+                        "text/html": [
+                            "Total execution time: 00:00:00"
+                        ]
                     },
-                    "metadata": {}
+                    "metadata": {},
+                    "output_type": "display_data"
                 }
             ],
-            "execution_count": 3
+            "source": [
+                "SELECT book_id\n",
+                "FROM BooksDB.dbo.books\n",
+                "WHERE ratings_1 > '1000'\n",
+                "UNION ALL\n",
+                "SELECT book_id\n",
+                "FROM BooksDB.dbo.books\n",
+                "WHERE ratings_5 > '1000'"
+            ]
         },
         {
+            "attachments": {},
             "cell_type": "markdown",
-            "source": [
-                "4. Write a query that returns the book ids of books that have a language code of \"en-US\" and not a langugae code of \"en-GB\"."
-            ],
             "metadata": {
                 "azdata_cell_guid": "2bd4844b-83af-490f-97cd-fdc1fa2944ec"
             },
-            "attachments": {}
+            "source": [
+                "4. Write a query that returns the book ids of books that have a language code of \"en-US\" and not a langugae code of \"en-GB\"."
+            ]
         },
         {
             "cell_type": "code",
-            "source": [
-                ""
-            ],
+            "execution_count": null,
             "metadata": {
                 "azdata_cell_guid": "ba5a1b61-19c0-4d70-ae8d-2daae6ae1e21"
             },
             "outputs": [
                 {
-                    "output_type": "display_data",
                     "data": {
-                        "text/html": "Commands completed successfully."
+                        "text/html": [
+                            "Commands completed successfully."
+                        ]
                     },
-                    "metadata": {}
+                    "metadata": {},
+                    "output_type": "display_data"
                 },
                 {
-                    "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00"
+                        "text/html": [
+                            "Total execution time: 00:00:00"
+                        ]
                     },
-                    "metadata": {}
+                    "metadata": {},
+                    "output_type": "display_data"
                 }
             ],
-            "execution_count": 4
+            "source": [
+                "SELECT book_id\n",
+                "FROM BooksDB.dbo.books\n",
+                "WHERE language_code = 'en-US'"
+            ]
         },
         {
+            "attachments": {},
             "cell_type": "markdown",
-            "source": [
-                "5. Write a query that returns the names of the tags and the tag ids for tags that were used over 100,000 times for a book. "
-            ],
             "metadata": {
                 "azdata_cell_guid": "6ddd588f-a84c-4c77-93ac-e8c8bd21d0f5"
             },
-            "attachments": {}
+            "source": [
+                "5. Write a query that returns the names of the tags and the tag ids for tags that were used over 100,000 times for a book. "
+            ]
         },
         {
             "cell_type": "code",
-            "source": [
-                ""
-            ],
+            "execution_count": null,
             "metadata": {
                 "azdata_cell_guid": "90f61ad7-65cb-4ea8-85a3-d8c815cfe347",
                 "tags": []
             },
             "outputs": [
                 {
-                    "output_type": "display_data",
                     "data": {
-                        "text/html": "Commands completed successfully."
+                        "text/html": [
+                            "Commands completed successfully."
+                        ]
                     },
-                    "metadata": {}
+                    "metadata": {},
+                    "output_type": "display_data"
                 },
                 {
-                    "output_type": "display_data",
                     "data": {
-                        "text/html": "Total execution time: 00:00:00"
+                        "text/html": [
+                            "Total execution time: 00:00:00"
+                        ]
                     },
-                    "metadata": {}
+                    "metadata": {},
+                    "output_type": "display_data"
                 }
             ],
-            "execution_count": 5
+            "source": [
+                "-- I don't think this is correct, but I can't figure out the last piece. This query only returns one row of data, where I *think* it should return 207. Any thoughts?\n",
+                "WITH tagid_count AS (\n",
+                "    -- all the tag id with a count of greater than 100000 (207 tags)\n",
+                "    SELECT DISTINCT bt.tag_id, bt.count \n",
+                "    FROM BooksDB.dbo.book_tags AS bt\n",
+                "    WHERE [count] > 100000\n",
+                ")\n",
+                "SELECT DISTINCT tags.tag_id, tags.tag_name\n",
+                "FROM BooksDB.dbo.tags AS tags\n",
+                "WHERE tags.tag_id  (SELECT tag_id FROM tagid_count)"
+            ]
         }
-    ]
+    ],
+    "metadata": {
+        "kernelspec": {
+            "display_name": "SQL",
+            "language": "sql",
+            "name": "SQL"
+        },
+        "language_info": {
+            "name": "sql",
+            "version": ""
+        }
+    },
+    "nbformat": 4,
+    "nbformat_minor": 2
 }
