--- a/sql-part-5/exercises/SQL-Part-5-Exercises.ipynb
+++ b/sql-part-5/exercises/SQL-Part-5-Exercises.ipynb
@@ -24,7 +24,14 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "CREATE TABLE SEP2025JunkDB.grace_graham.planned_makes(\n",
+    "    Project VARCHAR(200),\n",
+    "    Media VARCHAR(200),\n",
+    "    Time_Commitment VARCHAR(200),\n",
+    "    Budget INT\n",
+    "    )\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -42,7 +49,19 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "INSERT INTO Sep2025JunkDB.grace_graham.planned_makes\n",
+    "VALUES ('Quilt', 'Textiles', '2 Months', 300)\n",
+    "\n",
+    "INSERT INTO Sep2025JunkDB.grace_graham.planned_makes\n",
+    "VALUES ('Gallery Wall for Kitchen', 'Mixed Media, Prints', '6 Months', 500)\n",
+    "\n",
+    "INSERT INTO Sep2025JunkDB.grace_graham.planned_makes\n",
+    "VALUES ('Christmas Garland', 'Textiles and Yarns', '2 Weeks', 40)\n",
+    "\n",
+    "SELECT * \n",
+    "FROM Sep2025JunkDB.grace_graham.planned_makes"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,7 +81,11 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "UPDATE Sep2025JunkDB.grace_graham.planned_makes\n",
+    "SET Budget = 200\n",
+    "WHERE Project = 'Gallery Wall for Kitchen'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,7 +105,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "DELETE FROM Sep2025JunkDB.grace_graham.planned_makes WHERE Project = 'Quilt'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,7 +127,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "DROP TABLE Sep2025JunkDB.grace_graham.planned_makes"
+   ]
   }
  ],
  "metadata": {
